--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,28 @@
 body {
     background-color: black;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.header h1 {
     font-weight: normal;
     font-size: 50px;
     color: white;
     position: centered;
 }
 
-h3 {
+.header h3 {
     color: aquamarine;
     font-size: 16px;
+}
+
+.content h1 {
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.content h3 {
+    font-size: 21px;
+    color: gray;
 }
